--- a/W-test.tex
+++ b/W-test.tex
@@ -127,7 +127,7 @@ For several reasons, assumptions of homogeneity of variances and normality are a
 
 It has been argued that there are many fields in psychology where the assumption of normality does not hold (Cain, Zhang, \& Yuan, 2017; Micceri, 1989; Yuan, Bentler, \& Chan, 2004). As argued by Micceri (1989), there are several factors that could explain departures from the normality assumption, and we will focus on three of them: treatment effects, the presence of subpopulations, and the bounded measures underlying residuals.
 
-First, while it is obvious that the mean can be changed by the treatment effects, experimental treatment could also change the shape of a distribution, either by influencing the \emph{skewness}, quantifying the asymmetry of the shape of the distribution, and \emph{kurtosis}, a measure of the tendency to produce extreme values. A distribution with positive kurtosis will have heavier tails than the normal distribution, which means that extreme values will be more likely, while a distribution with negative kurtosis will have lighter tails than the normal distribution, meaning that extreme values will be less likely (Westfall, 2014; Wilcox, 2005). For example, Knapp and Dixon (1950) show that practicing juggling during an amount of time can have various effect of juggle learning efficiency between subjects. This could influence the kurtosis of the distribution.
+First, while it is obvious that the mean can be changed by the treatment effects, experimental treatment could also change the shape of a distribution, either by influencing the \emph{skewness}, quantifying the asymmetry of the shape of the distribution, and \emph{kurtosis}, a measure of the tendency to produce extreme values. A distribution with positive kurtosis will have heavier tails than the normal distribution, which means that extreme values will be more likely, while a distribution with negative kurtosis will have lighter tails than the normal distribution, meaning that extreme values will be less likely (Westfall, 2014; Wilcox, 2005). For example, a training aiming at reducing a bias perception of threat when being exposed to ambiguous words will not uniformly impact the perception of all participants, depending on their level of anxiety (Grey \& Mathews, 2000). This could influence the kurtosis of the distribution of bias score.
 
 Second, prior to any experimental treatment, the presence of several subpopulations may lead to departures from the normality assumptions. Subgroup might exist that are unequal on some characteristics relevant to the measurements, that are not controlled within the studied group, which results in mixed distributions. This unavoidable lack of control is inherent of our field given its complexity. As an illustration, Wilcox (2005) writes that pooling two normally-distributed populations that have the same mean but different variances (e.g.~normally distributed scores for schizophrenic and not schizophrenic participants) could result in distributions that are very similar to the normal curve, but with thicker tails. As another example, when assessing a wellness score for the general population, data may be sampled from a left-skewed distribution, because most people are probably not depressed (see Heun, Burkart, Maier, \& Bech, 1999). In this case, people who suffer from depression and people who do not suffer from depression are part of the same population, which can leads to asymmetry in the distribution.
 
@@ -149,7 +149,7 @@ Fourth, more often than not, psychological processes are captured in situations 
 \hypertarget{consequences-of-assumption-violations.}{%
 \section{Consequences of Assumption Violations.}\label{consequences-of-assumption-violations.}}
 
-Assumptions violations would not be a matter per se, if the \emph{F}-test was perfectly robust against departures from them (Glass et al., 1972). When performing a test, two types of error can be made: Type I errors and Type II errors. A Type I error consists of falsely rejecting the null hypothesis in favour of an alternative hypothesis, and the Type I error rate (\(\alpha\)) is the proportion of tests that, when sampling many times from the same population, reject the null hypothesis when there is no true effect in the population. A Type II error consists of incorrectly rejecting the alternative hypothesis in favour of the null hypothesis, and the Type II error rate (\(\beta\)) is the proportion of tests, when sampling many times from the same population, that fail to reject the null hypothesis when there is a true effect. Finally, the statistical power (1-\(\beta\)) is the proportion of tests, when sampling many times from the same population, that correctly reject the null hypothesis when there is a true effect in the population.
+Assumptions violations would not be a matter per se, if the \emph{F}-test was perfectly robust against departures from them (Glass et al., 1972). When performing a test, two types of error can be made: Type I errors and Type II errors. A Type I error consists of falsely rejecting the null hypothesis in favour of an alternative hypothesis, and the Type I error rate (\(\alpha\)) is the proportion of tests that, when sampling many times from the same population, reject the null hypothesis when there is no true effect in the population. A Type II error consists of failing to reject the null hypothesis, and the Type II error rate (\(\beta\)) is the proportion of tests, when sampling many times from the same population, that fail to reject the null hypothesis when there is a true effect. Finally, the statistical power (1-\(\beta\)) is the proportion of tests, when sampling many times from the same population, that correctly reject the null hypothesis when there is a true effect in the population.
 
 \hypertarget{violation-of-the-normality-assumption}{%
 \subsection{Violation of the Normality Assumption}\label{violation-of-the-normality-assumption}}
@@ -234,7 +234,7 @@ Population parameter values were chosen in order to illustrate the consequences 
 
 All possible combinations of \emph{n}-ratio and \emph{SD}-ratio were performed in order to distinguish positive pairings (the group with the largest sample size is extracted from the population with the largest \emph{SD}), negative pairings (the group with the smallest sample size is extracted from the population with the smallest \emph{SD}), and no pairing (sample sizes and/or population \emph{SD} are equal across all groups). All these conditions were tested with normal and non-normal distributions. When two groups are compared, conclusions for the three ANOVA tests (\emph{F}, \emph{F}*, \emph{W}) should yield identical error rates when compared to their equivalent \emph{t}-tests (the \emph{F}-test is equivalent to Student's \emph{t}-test, and the \emph{F}*-test and \emph{W}-test are equivalent to Welch's \emph{t}-test; Delacre et al., 2017). When there are more than three groups, the \emph{F}-test becomes increasingly liberal as soon as the variances of the distributions in each group are not similar, even when sample sizes are equal between groups (Harwell et al., 1992; Quensel, 1947).
 
-For didactic reasons, we will report only the results where we compare three groups (\emph{k}=3). Increasing the number of groups increases how liberal all tests are. For interested readers, all figures for cases where we compare more than three groups are available here: \url{https://github.com/mdelacre/W-ANOVA/tree/revisionbranch/Figures\%2C\%20Type\%20I\%20error\%20rate\%20and\%20power\%20for\%20all\%20k\%20between\%202\%20and\%205}. Overall, the higher the sample sizes, the less the distributions of the population underlying the samples impact the robustness of the tests (Srivastava, 1959). However, increasing the sample sizes does not improve the robustness of the test when there is heteroscedasticity. Interested reader can see all details in the following Excell spreadsheet, available on github : « Type I error rate.xlsx ».
+For didactic reasons, we will report only the results where we compare three groups (\emph{k}=3). Increasing the number of groups increases how liberal all tests are. For interested readers, all figures for cases where we compare more than three groups are available here: . Overall, the higher the sample sizes, the less the distributions of the population underlying the samples impact the robustness of the tests (Srivastava, 1959). However, increasing the sample sizes does not improve the robustness of the test when there is heteroscedasticity. Interested reader can see all details in the following Excell spreadsheet, available on github : « Type I error rate.xlsx ».
 
 In sum, the simulations grouped over different sample sizes yield 9 conditions based on the \emph{n}-ratio, \emph{SD}-ratio, and sample size and variance pairing, as summarized in Table 1.
 
@@ -279,17 +279,33 @@ When there is no difference between means, the 9 cells of Table 1 simplify into 
   Unequal \emph{n} and \emph{sd} across groups, with negative correlation between \emph{n} and \emph{sd} (f and h)
 \end{itemize}
 
-In Figure 1, we computed the average Type I error rate of the three tests under these 5 subcategories. The light grey area corresponds to the liberal criterion from Bradley (1978), who regards a departure from the nominal alpha level as acceptable whenever the Type I error rate falls within the interval {[}\(.5 \times \alpha\); \(1.5 \times \alpha\){]}. The dark grey area corresponds to the more conservative criterion from which departures from the nominal alpha is considered negligible as long as the Type I error rate falls within the interval {[}\(.9 \times \alpha\); \(1.1 \times \alpha\){]}.
+In Figure 1 to 5, we computed the average Type I error rate of the three tests under these 5 subcategories. The light grey area corresponds to the liberal criterion from Bradley (1978), who regards a departure from the nominal alpha level as acceptable whenever the Type I error rate falls within the interval {[}\(.5 \times \alpha\); \(1.5 \times \alpha\){]}. The dark grey area corresponds to the more conservative criterion from which departures from the nominal alpha is considered negligible as long as the Type I error rate falls within the interval {[}\(.9 \times \alpha\); \(1.1 \times \alpha\){]}.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{Rmarkdown folder/Rmarkdown inputs/Fig 1_after revision} \caption{Type I error rate of the F-test, W-test and F*-test under 5 conditions. Top left: cell a in Table 1; top right: cells b and c; bottom left: cells d and g; bottom middle: cells e and i; bottom right: cells f and h. }\label{fig:unnamed-chunk-1}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig1A} \caption{Type I error rate of the F-test, W-test and F*-test when there are equal SDs across groups and equal sample sizes (cell a in Table 1)}\label{fig:unnamed-chunk-1}
 \end{figure}
 
-In the two top plots in Figure 1 (see cells a, b, and c in Table 1), the population variance is equal between all groups, so the homoscedasticity assumption is met. The \emph{F}-test and \emph{F*}-test only marginally deviates from the nominal 5\%, regardless of the underlying distribution and the \emph{SD}-ratio. The \emph{W}-tests also only marginally deviates from the nominal 5\%, except under asymmetry (the tests becomes a little more sensitive) or extremely heavy tails (the test becomes a bit more conservative), consistently with observations in Harwell et al. (1992). However, deviations don't exceed the liberal criterion of Bradley (1978).
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig1B} \caption{Type I error rate of the F-test, W-test and F*-test when there are equal SDs across groups and unequal sample sizes (cells b and c in Table 1)}\label{fig:unnamed-chunk-2}
+\end{figure}
 
-In the three bottom plots in Figure 1 (cells d to i, Table 1) the population variance is unequal between groups, so that the homoscedasticity assumption is not met. When sample sizes are equal across groups (cells d and g, bottom left in Figure 1) and when there is a positive correlation between sample sizes and \emph{SDs} (cells e and i, bottom center in Figure 1), the Type I error rate of the \emph{W}-test is closer to the nominal 5\% than the Type I error rate of the \emph{F*}-test and the \emph{F}-test, the latter which is consistently at the lower limit of the liberal interval suggested by Bradley, in line with Harwell et al. (1992), Glass et al. (1972), Nimon (2012) and Overall et al. (1995). Heteroscedasticity does not impact the Type I error rate of the \emph{W}-test, regardless of the distribution (the order of the distribution shape remains the same in all conditions).
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig1C} \caption{Type I error rate of the F-test, W-test and F*-test when there are unequal SDs across groups and equal sample sizes (cells d and g in Table 1)}\label{fig:unnamed-chunk-3}
+\end{figure}
 
-When there is a negative correlation between sample sizes and \emph{SDs} (cells h and f, bottom right in Figure 1), the Type I error rate of the \emph{F*}-test is slightly closer of the nominal 5\% than the Type I error rate of the \emph{W}-test, for which the distributions (more specifically, the skewness) has a larger impact on the Type I error rate than when there is homoscedasticity. This is consistent with conclusions by Lix et al. (1996) about the Alexander-Govern and the James' second order tests (which return very similar results as the \emph{W}-test, as we already mentioned). However, both tests still perform relatively well, contrary to the \emph{F}-test that is much too liberal, in line with observations by Harwell et al. (1992), Glass et al. (1972), Nimon (2012) and Overall et al. (1995).
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig1D} \caption{Type I error rate of the F-test, W-test and F*-test when there are unequal SDs across groups, and positive correlation between sample sizes and SDs (cells e and i in Table 1)}\label{fig:unnamed-chunk-4}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig1E} \caption{Type I error rate of the F-test, W-test and F*-test when there are unequal SDs across groups, and negative correlation between sample sizes and SDs (cells f and g in Table 1)}\label{fig:unnamed-chunk-5}
+\end{figure}
+
+In Figure 1 and 2 (cells a, b and c in Table 1), the population variance is equal between all groups, so the homoscedasticity assumption is met. The \emph{F}-test and \emph{F*}-test only marginally deviates from the nominal 5\%, regardless of the underlying distribution and the \emph{SD}-ratio. The \emph{W}-tests also only marginally deviates from the nominal 5\%, except under asymmetry (the tests becomes a little more sensitive) or extremely heavy tails (the test becomes a bit more conservative), consistently with observations in Harwell et al. (1992). However, deviations don't exceed the liberal criterion of Bradley (1978).
+
+In Figures 3, 4 and 5 (cells d to i, Table 1) the population variance is unequal between groups, so that the homoscedasticity assumption is not met. When sample sizes are equal across groups (Figure 3) and when there is a positive correlation between sample sizes and \emph{SDs} (Figure 4), the Type I error rate of the \emph{W}-test is closer to the nominal 5\% than the Type I error rate of the \emph{F*}-test and the \emph{F}-test, the latter which is consistently at the lower limit of the liberal interval suggested by Bradley, in line with Harwell et al. (1992), Glass et al. (1972), Nimon (2012) and Overall et al. (1995). Heteroscedasticity does not impact the Type I error rate of the \emph{W}-test, regardless of the distribution (the order of the distribution shape remains the same in all conditions).
+
+When there is a negative correlation between sample sizes and \emph{SDs} (Figure 5), the Type I error rate of the \emph{F*}-test is slightly closer of the nominal 5\% than the Type I error rate of the \emph{W}-test, for which the distributions (more specifically, the skewness) has a larger impact on the Type I error rate than when there is homoscedasticity. This is consistent with conclusions by Lix et al. (1996) about the Alexander-Govern and the James' second order tests (which return very similar results as the \emph{W}-test, as we already mentioned). However, both tests still perform relatively well, contrary to the \emph{F}-test that is much too liberal, in line with observations by Harwell et al. (1992), Glass et al. (1972), Nimon (2012) and Overall et al. (1995).
 
 \hypertarget{conclusions}{%
 \subsubsection{Conclusions}\label{conclusions}}
@@ -314,26 +330,55 @@ We can draw the following conclusions for the Type I error rate:
 
 As previously mentioned, the statistical power (1-\(\beta\)) of a test is the long-run probability of observing a statistically significant result when there is a true effect in the population. We assessed the power of the \emph{F}-test, \emph{W}-test and \emph{F*}-test under 1280 scenarios, while using the nominal alpha level of 5\%. In all scenarios, the last group was extracted from a population that has a higher mean than the population from where were extracted all other groups (\(\mu_k = \mu_j+1\)). Because of this, in some scenarios there is a positive correlation between the \emph{SD} and the mean (i.e.~the last group has the largest \emph{SD} and the largest mean) and in other scenarios, there is a negative correlation between \emph{SD} and the mean (i.e.~the last group has the smallest \emph{SD} and the largest mean). As we know that the correlation between the \emph{SD} and the mean matters for the \emph{W}-test (see Liu, 2015), the 9 subconditions in Table 1 were analyzed separately.
 
-We computed two main outcomes: the consistency (Figure 2) and the power (Figure 3). The consistency refers to the relative difference between the observed power and the nominal power, divided by the expected power:
+We computed two main outcomes: the consistency and the power. The consistency refers to the relative difference between the observed power and the nominal power, divided by the expected power:
 \begin{equation} 
 Consistency=\frac{0-E}{E}
 \label{eq:RDPWtest}
 \end{equation}
+
 When consistency equals zero, the observed power is consistent with the nominal power (under the parametric assumptions of normality and homoscedasticity); a negative consistency shows that the observed power is lower than the expected power; and a positive consistency shows that the observed power is higher than the expected power.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{Rmarkdown folder/Rmarkdown inputs/Fig2_after revision} \caption{Consistency of the F-test, W-test and F*-test under 9 conditions}\label{fig:unnamed-chunk-2}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2a} \caption{Power and consistency of the F-test, W-test and F*-test when there are equal SDs across groups and equal sample sizes (cell a in Table 1)}\label{fig:unnamed-chunk-6}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{Rmarkdown folder/Rmarkdown inputs/Fig3_after revision} \caption{Power of the F-test, W-test and F*-test under 9 subcategories}\label{fig:unnamed-chunk-3}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2b} \caption{Power and consistency of the F-test, W-test and F*-test when there are equal SDs across groups, and positive correlation between sample sizes and means (cell b in Table 1)}\label{fig:unnamed-chunk-7}
 \end{figure}
 
-In the three top plots in Figures 2 and 3 (plots a, b and c), the population variance is equal between all groups, meaning that the homoscedasticity assumption is met. When distributions are normal, the \emph{W}-test is slightly less powerful than the \emph{F}-test and \emph{F*}-test, even through differences are very small. With all other distributions, the \emph{W}-test is generally more powerful than the \emph{F*}-test and \emph{F}-test, even with heavy tailed distributions, which is in contrast with previous findings (Wilcox, 1998). Wilcox (1998) concluded that there is a loss of power when means from heavy-tailed distributions (e.g.~double exponential or a mixed normal distribution) are compared to means from normal distributions. This finding is based on the argument that heavy-tailed distributions are associated with bigger standard deviations than normal distributions, and that the effect size for such distributions is therefore smaller (Wilcox, 2011). However, this conclusion is based on a common conflation of kurtosis and the standard deviation, which are completely independent (DeCarlo, 1997). One can find distributions that have similar \emph{SD}'s but different kurtosis (see Supplemental Material). However, while the \emph{W}-test is more powerful than the \emph{F}-test and the \emph{F*}-test in many situations,it is a bit less consistent with theoretical expectations than both other tests in the sense that the \emph{W}-test is generally more powerful than expected (especially with high kurtosis, or when asymmetries go in opposite directions). This is due to the fact that the \emph{W}-test is more impacted by the distribution shape, in line with observations by Harwell et al. (1992). Note that differences between \emph{W}-test and other tests, in terms of consistency, are very small.
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2c} \caption{Power and consistency of the F-test, W-test and F*-test when there are equal SDs across groups, and negative correlation between sample sizes and means (cell c in Table 1)}\label{fig:unnamed-chunk-8}
+\end{figure}
 
-In all but the three top plots in Figure 2 and 3 (plots d to i), the population variance is unequal between groups, meaning that the homoscedasticity assumption is not met. When sample sizes are equal across groups (plots d and g in Figure 2 and 3), the \emph{F}-test and the \emph{F*}-tests are equally powerful, and have the same consistency, whatever the correlation between the \emph{SD} and the mean. On the other hand, the power of the \emph{W}-test depends on the correlation between the \emph{SD} and the mean (in line with Liu, 2015). When the group with the largest mean has the largest variance (plot d in Figure 2 and 3), the largest deviation between group means and the general mean is given less weight, and as a consequence the \emph{W}-test is less powerful than both other tests. At the same time, the test is slightly less consistent than both other tests. When the group with the largest mean has the smallest variance (plot g in Figure 2 and 3), the largest deviation between group means and the general mean is given more weight, and therefore the \emph{W}-test is more powerful than both other tests. The test is also slightly more consistent than both other tests.
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2d} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, positive correlation between SDs and means, and equal sample sizes across groups (cell d in Table 1)}\label{fig:unnamed-chunk-9}
+\end{figure}
 
-When sample sizes are unequal across groups, the power of the \emph{F*}-test and the \emph{F}-test are a function of the correlation between sample sizes and \emph{SDs}. When there is a negative correlation between sample sizes and \emph{SDs} (plots f and h in Tables 2 and 3), the \emph{F}-test is always more powerful than the \emph{F*}-test. Indeed, as was explained in the previous mathematical section, the \emph{F}-test gives more weight to the smallest variance (the statistic is therefore increased) while the \emph{F*}-test gives more weight to the largest variance (the statistic is therefore decreased). Conversely, when there is a positive correlation between sample sizes and \emph{SDs} (plots e and i), the \emph{F}-test is always more conservative than the F\emph{*}-test, because the \emph{F}-test gives more weight to the largest variance while the \emph{F*}-test gives more weight to the smallest variance.
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2e} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups, negative correlation between SDs and means, and equal sample sizes across groups (cell g in Table 1)}\label{fig:unnamed-chunk-10}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2f} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,negative correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell f in Table 1)}\label{fig:unnamed-chunk-11}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2g} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,negative correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell h in Table 1)}\label{fig:unnamed-chunk-12}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2h} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,positive correlation betwen sample sizes and SDs, and positive correlation between SDs and means (cell e  in Table 1)}\label{fig:unnamed-chunk-13}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=400px]{Rmarkdown folder/Rmarkdown inputs/Fig2i} \caption{Power and consistency of the F-test, W-test and F*-test when there are unequal SDs across groups,positive correlation betwen sample sizes and SDs, and negative correlation between SDs and means (cell i  in Table 1)}\label{fig:unnamed-chunk-14}
+\end{figure}
+
+In Figures 6, 7 and 8 (cells a, b and c in Table 1), the population variance is equal between all groups, meaning that the homoscedasticity assumption is met. When distributions are normal, the \emph{W}-test is slightly less powerful than the \emph{F}-test and \emph{F*}-test, even through differences are very small. With all other distributions, the \emph{W}-test is generally more powerful than the \emph{F*}-test and \emph{F}-test, even with heavy tailed distributions, which is in contrast with previous findings (Wilcox, 1998). Wilcox (1998) concluded that there is a loss of power when means from heavy-tailed distributions (e.g.~double exponential or a mixed normal distribution) are compared to means from normal distributions. This finding is based on the argument that heavy-tailed distributions are associated with bigger standard deviations than normal distributions, and that the effect size for such distributions is therefore smaller (Wilcox, 2011). However, this conclusion is based on a common conflation of kurtosis and the standard deviation, which are completely independent (DeCarlo, 1997). One can find distributions that have similar \emph{SD}'s but different kurtosis (see Appendix 2). However, while the \emph{W}-test is more powerful than the \emph{F}-test and the \emph{F*}-test in many situations,it is a bit less consistent with theoretical expectations than both other tests in the sense that the \emph{W}-test is generally more powerful than expected (especially with high kurtosis, or when asymmetries go in opposite directions). This is due to the fact that the \emph{W}-test is more impacted by the distribution shape, in line with observations by Harwell et al. (1992). Note that differences between \emph{W}-test and other tests, in terms of consistency, are very small.
+
+In Figures 9 to 14 (cells d to i in Table 1), the population variance is unequal between groups, meaning that the homoscedasticity assumption is not met. When sample sizes are equal across groups (Figures 9 and 10), the \emph{F}-test and the \emph{F*}-tests are equally powerful, and have the same consistency, whatever the correlation between the \emph{SD} and the mean. On the other hand, the power of the \emph{W}-test depends on the correlation between the \emph{SD} and the mean (in line with Liu, 2015). When the group with the largest mean has the largest variance (Figure 9), the largest deviation between group means and the general mean is given less weight, and as a consequence the \emph{W}-test is less powerful than both other tests. At the same time, the test is slightly less consistent than both other tests. When the group with the largest mean has the smallest variance (Figure 10), the largest deviation between group means and the general mean is given more weight, and therefore the \emph{W}-test is more powerful than both other tests. The test is also slightly more consistent than both other tests.
+
+When sample sizes are unequal across groups, the power of the \emph{F*}-test and the \emph{F}-test are a function of the correlation between sample sizes and \emph{SDs}. When there is a negative correlation between sample sizes and \emph{SDs} (Figures 11 and 12), the \emph{F}-test is always more powerful than the \emph{F*}-test. Indeed, as was explained in the previous mathematical section, the \emph{F}-test gives more weight to the smallest variance (the statistic is therefore increased) while the \emph{F*}-test gives more weight to the largest variance (the statistic is therefore decreased). Conversely, when there is a positive correlation between sample sizes and \emph{SDs} (Figures 13 and 14), the \emph{F}-test is always more conservative than the F\emph{*}-test, because the \emph{F}-test gives more weight to the largest variance while the \emph{F*}-test gives more weight to the smallest variance.
 
 The power of the \emph{W}-test is not a function of the correlation between sample sizes and \emph{SDs}, but rather a function of the correlation between \emph{SDs} and means. The test is more powerful when there is a negative correlation between \emph{SDs} and means, and less powerful when there is a positive correlation between \emph{SDs} and means. Note that for all tests, the effect of heteroscedasticity is aproximately the same regardless of the shape of the distribution. Moreover, there is one persistent observation in our simulations: whatever the configuration of the \emph{n}-ratio, the consistency of the three tests is closer to zero when there is a negative correlation between the \emph{SD} and the mean (meaning that the group with the higest mean has the lower variance).
 
@@ -438,6 +483,9 @@ Glass, G. V., Peckham, P. D., \& Sanders, J. R. (1972). Consequences of failure 
 \leavevmode\hypertarget{ref-Green_et_al_2005}{}%
 Green, E. G., Deschamps, J.-C., \& Páez, D. (2005). Variation of individualism and collectivism within and between 20 countries: A typological analysis. \emph{Journal of Cross-Cultural Psychology}, \emph{36}(3), 321--339. doi:\href{https://doi.org/10.1177/0022022104273654}{10.1177/0022022104273654}
 
+\leavevmode\hypertarget{ref-Grey_and_Mathiews_2000}{}%
+Grey, S., \& Mathews, A. (2000). Effects of training on interpretation of emotional ambiguity. \emph{The Quarterly Journal of Experimental Psychology}, \emph{53}(4), 1143--1162. doi:\href{https://doi.org/10.1080/713755937}{10.1080/713755937}
+
 \leavevmode\hypertarget{ref-Grissom_2000}{}%
 Grissom, R. (2000). Heterogeneity of variance in clinical data. \emph{Journal of Consulting and Clinical Psychology}, \emph{68}(1), 155--165. doi:\href{https://doi.org/10.1037//0022-006x.68.1.155}{10.1037//0022-006x.68.1.155}
 
@@ -464,9 +512,6 @@ Keppel, G., \& Wickens, T. D. (2004). \emph{Design and analysis: A researcher's 
 
 \leavevmode\hypertarget{ref-Keselman_et_al_1998}{}%
 Keselman, H., Huberty, C. J., Lix, L. M., Olejnik, S., Cribbie, R. A., Donahue, B., \ldots{} Levin, J. R. (1998). Statistical practices of educational researchers: An analysis of their anova, manova, and ancova analy. \emph{Review of Educational Research}, \emph{68}(3), 350--386.
-
-\leavevmode\hypertarget{ref-Knapp_and_Dixon_1950}{}%
-Knapp, G., Clyde, \& Dixon, W. R. (1950). Learning to juggle: I. A study to determine the effect of two different distributions of practice on learning efficiency. \emph{Research Quarterly. American Association for Health, Physical Education and Recreation}, \emph{21}(3), 331--340. doi:\href{https://doi.org/10.1080/10671188.1950.10624864}{10.1080/10671188.1950.10624864}
 
 \leavevmode\hypertarget{ref-Koeser_and_Sczesny_2014}{}%
 Koeser, S., \& Sczesny, S. (2014). Promoting gender-fair language: The impact of arguments on language use, attitudes, and cognitions. \emph{Journal of Language and Social Psychology}, \emph{33}(5), 548--560. doi:\href{https://doi.org/10.1177/0261927x14541280}{10.1177/0261927x14541280}
